# merlin-engine

./: Cargo.toml  README.md
src/: checks.rs  config.rs  main.rs
src/tests/: config.toml  hash.txt
