[package]
name = "scoring-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminal-link = "0.1.0"
chksum-md5 = "0.0.0"
ring = "0.17.7"
data-encoding = "2.5.0"
digest = "0.11.0-pre.7"
toml = { version = "0.8.8", features = [] }
